First set of improvements (#2)
* Removed unused Stanford NLP model file and fixed the Docker file

* Some fixes and refactorings

1. Refactored the docker-related files paths in order to have them all in one place.
2. Fixed the maven shade plugin config in order to have the manifest file entry point.
3. Added a sample IntelliJ run configuration for running the model.
4. Moved the code style XML files into a separate folder
5. Moved docker executions and shade plugin config into the root POM.
6. Updated the docker file with parameters and removed the entry point to avoid using incorrect JAR name and allow the user to define own command

* Minor refactoring

* New run configs and fixes

1. Added new run configs for decoder-based and Q&A models
2. Added Generational ZGC
3. Upgraded Java to 21
4. Upgraded some libs and cleaned up POM
5. Fixed logback XML

* Another minor fixes

1. Added GC call for Q&A model in order to avoid memory leaks
2. Changed the artifact version to 1.0
3. Updated docker file and shell script

* Removed ZGC from Q&A model run config

* Fixed model run config for linux

* Minor changes

Added readme doc and fixed run configs